keep the header fix at the top for all pages. show a "jump to top" button on scroll. keep the tweeter feed list sticky on right side. Have separate scroll bar for tweeter feed. update social links in footer menu.

--- a/src/app/front/components/home/front-home.component.css
+++ b/src/app/front/components/home/front-home.component.css
@@ -19,7 +19,19 @@
   cursor: pointer;
 }
 
-.redirect-msg{
+.redirect-msg {
   font-size: 20px;
   padding: 18px 18px;
 }
+@media (min-width: 768px) {
+  .indexNPrt2Rght {
+    height: calc(100vh - 100px);
+    overflow: hidden;
+  }
+
+  .indexNPrt2Rght .tab-content {
+    height: calc(100% - 155px);
+    overflow: auto;
+  }
+}
+
